implementing create new user when authenticate with google

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,6 +51,9 @@
                     </div>
                     <p class="mt-3 text-center text-muted">Don't have an account? <a href="#" th:href="@{/register}">Sign up</a></p>
                 </form>
+                <br />
+                <hr/>
+                <a th:href="@{/oauth2/authorization/google}" class="btn btn-primary">Login with Google</a>
             </div>
         </div>
     </div>
